Quick fix for black unclicked menu links on mobile

--- a/frontend/src/Views/CSS/Navbar.css
+++ b/frontend/src/Views/CSS/Navbar.css
@@ -96,7 +96,7 @@
         margin: 0;
       }
       .navigation-menu li a {
-        color: black;
+        color: lightgrey;
         width: 100%;
         padding: 1.5rem 0;
       }
